--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -27,8 +27,9 @@
           </tr>
           <tr>
             <td>
-              <select-payment-deadline [(model)]="constant.paymentDeadLineTypeOne" [form]="constantForm"
-                propertyName="paymentDeadLineTypeOne" label="Dead line payment 30 days"  [isMandatory]="true" [isDisabled]="!editMode">
+              <select-payment-deadline [(model)]="constant.paymentDeadLineType30" [form]="constantForm"
+                propertyName="paymentDeadLineType30" label="Délai de paiement - 30 jours" [isMandatory]="true"
+                [isDisabled]="!editMode">
               </select-payment-deadline>
             </td>
           </tr>
