Rajouter un champ pour filtrer par tiers dans menu d'association d'un paiement

--- a/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
@@ -30,6 +30,11 @@
             propertyName="customerOrderId" [isMandatory]="false"></generic-input>
         </td>
         <td *ngIf="isForPaymentAssocationIntegration">
+          <autocomplete-tiers-individual [(model)]="searchedTiers" label = "Tiers" [form]="invoiceForm"
+            propertyName="tiers" [isMandatory]="false" [authorizeNonIndividualTiers]="true"></autocomplete-tiers-individual>
+        </td>
+
+        <td *ngIf="isForPaymentAssocationIntegration">
           <generic-input [(model)]="invoiceSearch.invoiceId" label="Numéro de facture" [form]="invoiceForm"
             propertyName="invoiceId" [isMandatory]="false"></generic-input>
         </td>
