--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -77,7 +77,7 @@
     </ul>
   </div>
   <div>
-    <table class="full-width  " *ngIf="false &&  isNotInpi() && canAddNewInvoice()">
+    <table class="full-width  " *ngIf="  isNotInpi() && canAddNewInvoice()">
       <tr>
         <td>
           Rechercher une facture automatique :
