--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -94,7 +94,7 @@
         </td>
       </tr>
     </table>
-    <table class="full-width  " *ngIf=" isNotInpi() && canAddNewInvoice()">
+    <table class="full-width  " *ngIf=" false && isNotInpi() && canAddNewInvoice()">
       <tr>
         <td>
           Rechercher une facture de greffe :
