--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -14,7 +14,7 @@
               *ngIf="formalite.competentAuthorityServiceProvider && formalite.competentAuthorityServiceProvider.id == competentAuthorityInpi.id">
               <chips-formalite-guichet-unique [(model)]="formalite.formalitesGuichetUnique" [form]="formaliteForm"
                 propertyName="formaliteGuichetUnique" [isMandatory]="false" label="Nom du dossier GU"
-                [isDisabled]="!editMode" [provision]="provision"></chips-formalite-guichet-unique>
+                [isDisabled]="!editMode"></chips-formalite-guichet-unique>
             </td>
             <td
               *ngIf="formalite.waitedCompetentAuthority && formalite.formaliteStatus && formalite.formaliteStatus.code ==FORMALITE_STATUS_WAITING_DOCUMENT_AUTHORITY">
