--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -14,16 +14,30 @@
   </ng-container>
   <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) &&  customerOrderProviderInvoices">
     <h3 class="invoice-title" *ngFor="let invoice of customerOrderProviderInvoices">
-      Facture fournisseur n°{{invoice.invoiceId}}, {{invoice.providerLabel}}, saisie le
-      {{invoice.createdDate|date:'dd/MM/yyyy à HH:mm'}}, pour un
-      total
-      de {{invoice.totalPrice}} €
-      <chips-status class="invoice-chip" [status]="invoice.invoiceStatusCode" [value]="invoice.invoiceStatus">
-      </chips-status>
-      <mat-icon color="accent" (click)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)"
-        (auxclick)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)" matTooltip="Voir la facture" color="accent"
-        class="pointer invoice-chip">visibility
-      </mat-icon>
+      <ng-container *ngIf="invoice.isInvoiceFromProvider">
+        Facture fournisseur n°{{invoice.invoiceId}}, {{invoice.providerLabel}}, saisie le
+        {{invoice.createdDate|date:'dd/MM/yyyy à HH:mm'}}, pour un
+        total
+        de {{invoice.totalPrice}} €
+        <chips-status class="invoice-chip" [status]="invoice.invoiceStatusCode" [value]="invoice.invoiceStatus">
+        </chips-status>
+        <mat-icon color="accent" (click)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)"
+          (auxclick)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)" matTooltip="Voir la facture"
+          color="accent" class="pointer invoice-chip">visibility
+        </mat-icon>
+      </ng-container>
+      <ng-container *ngIf="invoice.isProviderCreditNote">
+        Avoir fournisseur n°{{invoice.invoiceId}}, {{invoice.providerLabel}}, saisi le
+        {{invoice.createdDate|date:'dd/MM/yyyy à HH:mm'}}, pour un
+        total
+        de {{invoice.totalPrice}} €
+        <chips-status class="invoice-chip" [status]="invoice.invoiceStatusCode" [value]="invoice.invoiceStatus">
+        </chips-status>
+        <mat-icon color="accent" (click)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)"
+          (auxclick)="openRoute($event,'/invoicing/view/'+invoice.invoiceId)" matTooltip="Voir l'avoir" color="accent"
+          class="pointer invoice-chip">visibility
+        </mat-icon>
+      </ng-container>
     </h3>
   </ng-container>
   <fieldset [disabled]="editMode==false" class="fieldset-no-border">
