--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.css
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.css
@@ -22,6 +22,14 @@
   transform: scale(1);
 }
 
+
+.column-icon-number {
+  position: absolute;
+  top: 18px;
+  right: -2px;
+  transform: scale(0.7);
+}
+
 td {
   padding-right: 8px;
 }
