--- a/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
+++ b/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
@@ -35,7 +35,7 @@
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="affaires" tableName="Affaires"
-      *ngIf="displayedColumns && displayedColumns.length>0 ">
+      *ngIf="displayedColumns && displayedColumns.length>0 " [displayTotalLines]="isForDashboard">
     </sort-table>
   </div>
 </div>
