evo - reprendre les infos de la facture entrante lorsqu on cree un avoir

--- a/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
+++ b/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
@@ -192,8 +192,8 @@
         <td>
           <autocomplete-billing-item [(model)]="invoiceItem.billingItem" [form]="invoiceForm"
             label="Poste de facturation" propertyName="Poste de facturation" [isMandatory]="true"
-            (onOptionSelected)="fillBillingItem(invoiceItem,invoiceItem.billingItem)"
-            [isDisabled]="!editMode || invoice.id!=undefined">
+            (onOptionSelected)="fillBillingItem(invoiceItem,invoiceItem.billingItem)" [isMandatory]="true"
+             [isDisabled]="!editMode || invoice.id!=undefined">
           </autocomplete-billing-item>
         </td>
       </tr>
