--- a/client/src/app/modules/invoicing/components/direct-debit-transfert-list/direct-debit-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/direct-debit-transfert-list/direct-debit-transfert-list.component.html
@@ -34,7 +34,7 @@
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="transfers" tableName="Virements"
-      *ngIf="displayedColumns && displayedColumns.length>0 ">
+      [displayTotalLines]="true" *ngIf="displayedColumns && displayedColumns.length>0 ">
     </sort-table>
   </div>
 </div>
