--- a/client/src/app/modules/invoicing/components/infogreffe-invoice-list/infogreffe-invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/infogreffe-invoice-list/infogreffe-invoice-list.component.html
@@ -1,7 +1,7 @@
 <div class="mat-elevation-z2 form-div">
   <div class=" full-width">
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="infogreffeInvoices"
-      tableName="Virements">
+      [displayTotalLines]="true" tableName="Virements">
     </sort-table>
   </div>
   <div *ngIf="canImportInfogreffeInvoice()">
