--- a/client/src/app/modules/invoicing/components/azure-invoice-list/azure-invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/azure-invoice-list/azure-invoice-list.component.html
@@ -13,7 +13,8 @@
         </td>
       </tr>
     </table>
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="invoices" tableName="Appoints">
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="invoices" tableName="Appoints"
+      [displayTotalLines]="true">
     </sort-table>
   </div>
 </div>
