--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -13,7 +13,8 @@
             <td
               *ngIf="formalite.competentAuthorityServiceProvider && formalite.competentAuthorityServiceProvider.id == competentAuthorityInpi.id">
               <chips-formalite-guichet-unique [(model)]="formalite.formalitesGuichetUnique" [form]="formaliteForm"
-                propertyName="formaliteGuichetUnique" [isMandatory]="false" label="Nom du dossier GU"
+                propertyName="formaliteGuichetUnique" [isMandatory]="false"
+                label="Nom du dossier GU (SIREN pour les comptes annuels)"
                 [isDisabled]="!editMode"></chips-formalite-guichet-unique>
             </td>
             <td
