--- a/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
@@ -12,7 +12,7 @@
             (click)="movePayment(payment)">déplacer</span>) - {{payment.label}}
         </td>
         <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-          {{payment.paymentAmount}} €
+          {{payment.isAppoint ? -payment.paymentAmount : payment.paymentAmount}} €
         </td>
       </ng-container>
     </tr>
@@ -25,18 +25,6 @@
   </tr>
   <tr class="mat-mdc-row mdc-data-table__row " *ngIf="!invoice.isCreditNote && !invoice.isProviderCreditNote">
     <td class="mat-mdc-cell mdc-data-table__cell ">Reste à payer
-    </td>
-    <td class="mat-mdc-cell mdc-data-table__cell  td-price ">{{getAmountRemaining(invoice)}} €
-    </td>
-  </tr>
-  <tr class="mat-mdc-row mdc-data-table__row " *ngIf="invoice.isCreditNote">
-    <td class="mat-mdc-cell mdc-data-table__cell ">Net à créditer
-    </td>
-    <td class="mat-mdc-cell mdc-data-table__cell  td-price ">{{getAmountPayed(invoice)}} €
-    </td>
-  </tr>
-  <tr class="mat-mdc-row mdc-data-table__row " *ngIf="invoice.isProviderCreditNote">
-    <td class="mat-mdc-cell mdc-data-table__cell ">Remboursement à percevoir
     </td>
     <td class="mat-mdc-cell mdc-data-table__cell  td-price ">{{getAmountRemaining(invoice)}} €
     </td>
