--- a/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
+++ b/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
@@ -46,6 +46,11 @@
       <provision-options (provisionChange)="provisionChangeFunction()" [editMode]="editMode" [provision]="provision">
       </provision-options>
     </mat-tab>
+    <mat-tab label="Paiements & factures"
+      *ngIf="bodacc.id && provision && quotation &&  instanceOfCustomerOrderFn(quotation)">
+      <provision-payment [editMode]="editMode" [provision]="provision" [quotation]="quotation">
+      </provision-payment>
+    </mat-tab>
     <mat-tab label="Imprimé"
       *ngIf="bodacc.bodaccPublicationType && (bodacc.bodaccPublicationType.id==bodaccPublicationTypePartialSplit.id ||bodacc.bodaccPublicationType.id==bodaccPublicationTypeSplit.id || bodacc.bodaccPublicationType.id==bodaccPublicationTypeMerging.id || bodacc.bodaccPublicationType.id==bodaccPublicationTypeSaleOfBusiness.id)">
       <bodacc-sale [bodaccSale]="bodacc.bodaccSale" [editMode]="editMode"
