--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -99,6 +99,11 @@
       <provision-options [editMode]="editMode" (provisionChange)="provisionChangeFunction()" [provision]="provision">
       </provision-options>
     </mat-tab>
+    <mat-tab label="Paiements & factures"
+      *ngIf="domiciliation.id && provision && quotation &&  instanceOfCustomerOrderFn(quotation)">
+      <provision-payment [editMode]="editMode" [provision]="provision" [quotation]="quotation">
+      </provision-payment>
+    </mat-tab>
     <mat-tab label="Activité">
       <div class=" form-div">
         <table class="full-width">
