--- a/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
+++ b/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
@@ -222,7 +222,7 @@
         <td>
           <generic-input [(model)]="invoiceItem.discountAmount" label="Remise totale" [form]="invoiceForm"
             propertyName="discountAmount" [isMandatory]="false" [isDisabled]="!editMode || invoice.id!=undefined"
-            type="number"></generic-input>
+            type="number" *ngIf="invoice.isInvoiceFromProvider"></generic-input>
         </td>
       </tr>
     </table>
