--- a/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
+++ b/client/src/app/modules/invoicing/components/add-invoice/add-invoice.component.html
@@ -6,20 +6,21 @@
           <td *ngIf="!invoice.responsable && !invoice.confrere && !invoice.provider && !invoice.competentAuthority">
             <autocomplete-tiers-individual [(model)]="invoice.tiers" [form]="invoiceForm" propertyName="tiers"
               (onOptionSelected)="fillTiers($event)" [isMandatory]="true" label="Tiers"
-              [isDisabled]="!editMode || invoice.id!=undefined"
+              [isDisabled]="!editMode || invoice.id!=undefined || idInvoiceForCreditNote?true:false"
               [conditionnalRequired]="invoice.responsable==undefined && invoice.confrere==undefined && invoice.provider ==undefined  && invoice.competentAuthority ==undefined">
             </autocomplete-tiers-individual>
           </td>
           <td *ngIf="!invoice.tiers && !invoice.confrere && !invoice.provider  && !invoice.competentAuthority">
             <autocomplete-responsable [(model)]="invoice.responsable" [form]="invoiceForm" propertyName="responsable"
               (onOptionSelected)="fillResponsable($event)" [isMandatory]="true" label="Responsable"
-              [isDisabled]="!editMode   || invoice.id!=undefined"
+              [isDisabled]="!editMode   || invoice.id!=undefined || idInvoiceForCreditNote?true:false"
               [conditionnalRequired]="invoice.tiers==undefined && invoice.confrere==undefined && invoice.provider ==undefined && invoice.competentAuthority ==undefined">
             </autocomplete-responsable>
           </td>
           <td *ngIf="!invoice.tiers && !invoice.responsable && !invoice.provider  && !invoice.competentAuthority">
             <autocomplete-confrere label="Confrère" [(model)]="invoice.confrere" [form]="invoiceForm"
-              propertyName="confrere" [isDisabled]="!editMode   || invoice.id!=undefined"
+              propertyName="confrere"
+              [isDisabled]="!editMode   || invoice.id!=undefined || idInvoiceForCreditNote?true:false"
               (onOptionSelected)="fillConfrere($event)" [isMandatory]="true"
               [conditionnalRequired]="invoice.responsable==undefined && invoice.tiers==undefined && invoice.provider ==undefined && invoice.competentAuthority ==undefined">
             </autocomplete-confrere>
@@ -27,15 +28,16 @@
           <td
             *ngIf="!invoice.tiers && !invoice.responsable && !invoice.confrere &&  !invoice.competentAuthority && (invoice.isInvoiceFromProvider || invoice.isProviderCreditNote)">
             <autocomplete-provider [(model)]=" invoice.provider" [form]="invoiceForm" propertyName="provider"
-              [isMandatory]="true" [isDisabled]="!editMode   || invoice.id!=undefined"
+              [isMandatory]="true"
+              [isDisabled]="!editMode   || invoice.id!=undefined || idInvoiceForCreditNote?true:false"
               [conditionnalRequired]="invoice.responsable==undefined && invoice.tiers==undefined && invoice.confrere ==undefined && invoice.competentAuthority ==undefined"
               (onOptionSelected)="fillProvider($event)" label="Fournisseur"></autocomplete-provider>
           </td>
           <td
             *ngIf="!invoice.tiers && !invoice.responsable && !invoice.confrere && !invoice.provider && (invoice.isInvoiceFromProvider || invoice.isProviderCreditNote)">
             <autocomplete-competent-authority [(model)]="invoice.competentAuthority"
-              [isDisabled]="!editMode   || invoice.id!=undefined" [form]="invoiceForm" propertyName="competentAuthority"
-              [isMandatory]="true"
+              [isDisabled]="!editMode   || invoice.id!=undefined || idInvoiceForCreditNote?true:false"
+              [form]="invoiceForm" propertyName="competentAuthority" [isMandatory]="true"
               [conditionnalRequired]="invoice.responsable==undefined && invoice.tiers==undefined && invoice.confrere ==undefined && invoice.provider==undefined"
               (onOptionSelected)="fillCompetentAuthority($event)"
               label="Autorité compétente"></autocomplete-competent-authority>
