--- a/client/src/app/modules/quotation/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/quotation/components/payment-list/payment-list.component.html
@@ -15,10 +15,6 @@
             propertyName="label" [isMandatory]="false" [isDisabled]="false"></generic-input>
         </td>
         <td>
-          <generic-toggle [(model)]="paymentSearch.isHideAssociatedPayments" label="Masquer les paiements associés"
-            [form]="paymentForm" propertyName="isHideAssociatedPayments"></generic-toggle>
-        </td>
-        <td>
           <generic-date-range-picker [(modelStart)]="paymentSearch.startDate" [(modelEnd)]="paymentSearch.endDate"
             label="Plage de recherche" [form]="paymentForm" propertyNameStart="startDate" propertyNameEnd="endDate">
           </generic-date-range-picker>
@@ -27,6 +23,16 @@
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchPayments()" class="add-button">
             <mat-icon>search</mat-icon>
           </button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <generic-toggle [(model)]="paymentSearch.isHideAssociatedPayments" label="Masquer les paiements associés"
+            [form]="paymentForm" propertyName="isHideAssociatedPayments"></generic-toggle>
+        </td>
+        <td>
+          <generic-toggle [(model)]="paymentSearch.isHideCancelledPayments" label="Masquer les paiements annulés"
+            [form]="paymentForm" propertyName="isHideCancelledPayments"></generic-toggle>
         </td>
       </tr>
     </table>
