--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -1,9 +1,9 @@
 <ng-template #accordionTools>
   <mat-panel-description>
-    <mat-icon color="accent"  matTooltip="Ouvrir tous les onglets"
+    <mat-icon color="accent" matTooltip="Ouvrir tous les onglets"
       (click)="accordion!.openAll();$event.stopPropagation();" class="pointer">
       unfold_more_double</mat-icon>
-    <mat-icon color="accent"  matTooltip="Fermer tous les autres onglets" (click)="accordion!.closeAll();"
+    <mat-icon color="accent" matTooltip="Fermer tous les autres onglets" (click)="accordion!.closeAll();"
       class="pointer">
       unfold_less_double</mat-icon>
   </mat-panel-description>
@@ -121,7 +121,7 @@
                   <ng-template mat-tab-label>
                     {{asso.affaire.denomination?asso.affaire.denomination:(asso.affaire.firstname + ' ' +
                     asso.affaire.lastname)}} {{asso.affaire.city?('- ' + asso.affaire.city.label):''}} <mat-icon
-                      color="accent" matTooltip="Supprimer l'affaire"
+                      color="accent" matTooltip="Supprimer l'affaire" *ngIf="editMode"
                       (click)="deleteAffaire(asso.affaire);$event.stopPropagation();" class="pointer">delete</mat-icon>
                   </ng-template>
                   <div class="mat-accordion-container full-width">
@@ -137,7 +137,7 @@
                             <avatar-chip *ngIf="asso.assignedTo && asso.id" [employee]="asso.assignedTo"
                               (onChangeAssigne)="updateAssignedToForAffaire($event,asso)">
                             </avatar-chip>
-                            <mat-icon color="accent"  matTooltip="Voir/éditer l'affaire"
+                            <mat-icon color="accent" matTooltip="Voir/éditer l'affaire"
                               (click)="displayAffaire($event, asso.affaire);$event.stopPropagation();"
                               (auxclick)="displayAffaire($event, asso.affaire);$event.stopPropagation();"
                               class="pointer">
@@ -174,7 +174,7 @@
                               matTooltip="Voir/éditer la prestation" (click)="displayProvision($event, asso,provision)"
                               (auxclick)="displayProvision($event, asso,provision)" class="pointer">
                               work</mat-icon>
-                            <mat-icon color="accent"  *ngIf="editMode" matTooltip="Supprimer la prestation"
+                            <mat-icon color="accent" *ngIf="editMode" matTooltip="Supprimer la prestation"
                               (click)="deleteProvision(asso,provision)" class="pointer">
                               delete</mat-icon>
                           </mat-panel-description>
