--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1286,7 +1286,7 @@
             <td>
               <autocomplete-provider [(model)]="constant.providerCentralPay" [form]="constantForm"
                 propertyName="providerCentralPay" [isMandatory]="true" [isDisabled]="!editMode"
-                label="Fournisseur - Central Pat"></autocomplete-provider>
+                label="Fournisseur - Central Pay"></autocomplete-provider>
             </td>
           </tr>
         </table>
