--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -44,6 +44,9 @@
       <provision-payment [editMode]="editMode" [provision]="provision" [quotation]="quotation">
       </provision-payment>
     </mat-tab>
+    <mat-tab label="Historique GU" *ngIf="formalite && formalite.id && formalite.formalitesGuichetUnique ">
+      <guichet-unique-status [formalitesGuichetUnique]="formalite.formalitesGuichetUnique"></guichet-unique-status>
+    </mat-tab>
     <mat-tab label="Documents" *ngIf="formalite.id && provision ">
       <attachments [entity]="provision" [editMode]="editMode" [entityType]="PROVISION_ENTITY_TYPE.entityType">
       </attachments>
